--- a/index.html
+++ b/index.html
@@ -1,57 +1,75 @@
 <!DOCTYPE html>
-<html lang="en-gb">
+<html class="h-100">
+    <head>
+      <!-- meta tags -->
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="styles/reset.css" />
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" /> -->
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
-  <title>Weather Dashboard</title>
-</head>
+      <!-- Bootstrap CSS -->
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-<body>
-  <header class="container-fluid text-center text-white bg-dark p-2 weather-header">
-    <h1>Weather Dashboard</h1>
-  </header>
+      <!--Font Awesome 5-->
+      <script src="https://kit.fontawesome.com/e453f64fdd.js" crossorigin="anonymous"></script>
 
-  <!-- max-width for ultra wide resolutions -->
-  <div class="container-fluid" style="max-width: 1400px">
-    <div class="row">
-      <aside class="col-lg-3 pb-3">
-        <h2 id="form-heading" class="mt-1 h3 form-label">
-          Search for a City:
-        </h2>
-        <form id="search-form" class="form">
-          <div class="form-inline form-group">
-            <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
-                aria-labelledby="form-heading" aria-controls="today forecast" />
-              <div class="input-group-append">
-                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
-                  Search
-                </button>
-                <hr class="hr weather-hr" />
-              </div>
+      <title>Super Weather Dashboard</title>
+
+      <!--responsiveness of search bar-->
+      <style>
+        .search-entry:hover {
+          cursor: pointer;
+          text-decoration: underline;
+        }
+        @media only screen and (min-width: 992px) {
+          #dashboard {
+            flex-grow: 1;
+          }
+          #five-day-weather-card {
+            width: 20%;
+          }
+        }
+      </style>
+    </head>
+    <body class="h-100">
+      <main class="container-fluid h-100 d-flex flex-column">
+        <div class="row">
+          <div class="col p-0">
+            <div class="jumbotron jumbotron-fluid py-1 mb-0 bg-dark text-center">
+              <h1 class="text-light">Super Weather Dashboard</h1>
             </div>
           </div>
-        </form>
-        <div class="list-group" id="history"></div>
-      </aside>
+        </div>
+        <div class="row" id="dashboard">
+          <div class="col col-lg-3 py-3 bg-light" id="search-bar">
+            <form class="form-group" id="search-city">
+              <label for="city-name" class="h4">Search for a city:</label>
+              <div class="form-inline">
+                <input type="text" class="form-control w-75" id="city-name">
+                <button type="submit" class="btn btn-primary" id="search">
+                  <i class="fas fa-search"></i>
+                </button>
+              </div>
+              <p class="text-danger" id="error"></p>
+            </form>
+            <div class="card">
+              <div class="card-header h5 text-center">
+                Your Search history
+              </div>
+              <ul class="list-group list-group-flush" id="search-history"></ul>
+            </div>
+          </div>
+          <div class="col-lg-9 py-3" id="city-info" data-city="">
+            <div class="w-100 h-100 d-flex" id="start-text">
+              <h2 class="m-auto text-center font-weight-normal">Enter a city name to view<br>weather information.</h2>
+            </div>
+          </div>
+        </div>  
+      </main>
+      
 
-      <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
-      </div>
-    </div>
-  </div>
-
-  <!-- Moment.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-  <!-- jQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="script.js"></script>
-</body>
-
+    <!-- JavaScript -->
+     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="./js/script.js"></script>
+    </body>
 </html>
